# EC530_DataSystem

./: .gitignore  AI_USAGE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_SPEC.md
examples/: sales.csv
src/datasheet_ai/: __init__.py  cli.py  csv_loader.py  errors.py  llm_adapter.py  models.py  query_service.py  schema_manager.py  sql_validator.py
tests/: conftest.py  test_csv_loader.py  test_query_service.py  test_schema_manager.py  test_sql_validator.py
